New implementation of methods for energy, alien, astronauts